--- a/ruth_application/app/assets/stylesheets/ruth_application/plugins.scss
+++ b/ruth_application/app/assets/stylesheets/ruth_application/plugins.scss
@@ -111,7 +111,11 @@ li.token-input-token-facebook {
 }
 
 li.token-input-input-token-facebook {
-	margin: 3px 0 0 0;
+	margin: 2px 0 1px 0;
+}
+
+li.token-input-input-token-facebook input::placeholder {
+	color: #999999;
 }
 
 li.token-input-token-facebook span {
